# -----------------------------------------------------------------------------
# Add Sub-Directories

add_subdirectory(include)
add_subdirectory(interface)
add_subdirectory(screen)
add_subdirectory(space_api)
add_subdirectory(space_statusbar)
add_subdirectory(space_topbar)
add_subdirectory(space_userpref)
add_subdirectory(space_view3d)
add_subdirectory(space_file)
